# WeeklyLearningAssistant

./: README.md  pyproject.toml
src/weekly_learning_assistant/: crew.py  main.py
src/weekly_learning_assistant/config/: agents.yaml  tasks.yaml
