[project]
name = "weekly_learning_assistant"
version = "0.1.0"
description = "weekly_learning_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.13.0",
    "pydantic",
]

[project.scripts]
weekly_learning_assistant = "weekly_learning_assistant.main:run"
run_crew = "weekly_learning_assistant.main:run"
train = "weekly_learning_assistant.main:train"
replay = "weekly_learning_assistant.main:replay"
test = "weekly_learning_assistant.main:test"
run_with_trigger = "weekly_learning_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
